kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: localhost
    http:
      paths: 
      - path: /watercolors
        pathType: Prefix
        backend:
          service:
            name: watercolors-catalogue
            port: 
              number: 8080
